--- a/BlazorApp4/Layout/NavMenu.razor
+++ b/BlazorApp4/Layout/NavMenu.razor
@@ -12,17 +12,7 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
+            </NavLink>   
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateAccount">
@@ -31,7 +21,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="NewTransaction">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> New Transaction
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Transaction
             </NavLink>
         </div>
         <div class="nav-item px-3">
