--- a/BlazorApp4/Pages/CreateAccount.razor
+++ b/BlazorApp4/Pages/CreateAccount.razor
@@ -31,7 +31,7 @@
 
     <div class="mb-3">
         <label class="form-label">Balance</label>
-        <InputNumber @bind-Value="_model.InitialBalance" class="form-control"></InputNumber>
+        <InputNumber @bind-Value="_model.InitialBalance" class="form-control" min="0.01" step="0.01"></InputNumber>
         
     </div>
 
@@ -116,7 +116,7 @@ else
         {
             await AccountService.DeleteAccount(Id);
             _accounts = await AccountService.GetAccounts(); // uppdaterar listan
-            StateHasChanged(); //uppdaterar UI
+            StateHasChanged(); // uppdaterar UI
         }
         catch (Exception ex)
         {
