--- a/BlazorApp4/Layout/NavMenu.razor
+++ b/BlazorApp4/Layout/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> History
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="TransactionHistory">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> TransactionHistory
+            </NavLink>
+        </div>
     </nav>
 </div>
 
