--- a/BlazorApp4/Layout/MainLayout.razor
+++ b/BlazorApp4/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject IAccountService AccountService
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -14,3 +16,10 @@
         </article>
     </main>
 </div>
+
+@code {
+    protected override async Task OnInitializedAsync()
+    {
+        await AccountService.EnsureLoadedAsync();
+    }
+}
