lagt till EnsureLoadedAsync för samtliga sidor, fungerar korrekt

--- a/BlazorApp4/Pages/CreateAccount.razor
+++ b/BlazorApp4/Pages/CreateAccount.razor
@@ -73,6 +73,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        await AccountService.EnsureLoadedAsync();
         _accounts = AccountService.GetAccounts();
     }
 
