--- a/BlazorApp4/Pages/NewTransaction.razor
+++ b/BlazorApp4/Pages/NewTransaction.razor
@@ -49,6 +49,7 @@ else
         </div>
     </EditForm>
 
+    <!--List of all accounts-->
     <div>
     <h3 class="mb-3">All accounts</h3>
         <ul class="list-group">
@@ -138,7 +139,6 @@ else
     </div>
     </div>
     </div>
-
 }
 
 @code 
