--- a/BlazorApp4/Layout/NavMenu.razor
+++ b/BlazorApp4/Layout/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject LockService LockService
+
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">BlazorApp4</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -10,7 +13,7 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>   
         </div>
@@ -29,6 +32,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Transaction History
             </NavLink>
         </div>
+        <div class="mt-auto nav-item px-3">
+            <a href="#" class="nav-link logout-link" @onclick="LockApp">
+                <span class="bi bi-box-arrow-right" aria-hidden="true"></span> Log out
+            </a>
+        </div>
     </nav>
 </div>
 
@@ -40,5 +48,10 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private void LockApp()
+    {
+        LockService.Lock();
     }
 }
